# commanders-handbook

./: .gitignore  404.html  README.md  beet.yaml  book.toml  index.html  lectern.html  print.html  pyproject.toml  searchindex.js  searchindex.json
.github/workflows/: gh-pages.yml
commanders_handbook/: context.py  preprocess.py  render.py
docs/: 404.html  _config.yml  articles.md  authors.md  index.html  index.md
docs/_authors/: arcensoth.md  vdvman1.md
docs/_data/: sidebar.yml
docs/_drafts/: random-number-generation-with-uuids.md  the-problem-with-structure-blocks.md
docs/_includes/: article-sections.html  authors-ul.html  nav.md  toc.html
docs/_layouts/: author.html  default.html  post.html
docs/_pages/: contributing.md
docs/_posts/: 2018-08-13-on-comparators.md  2018-08-13-selector-best-practices.md  2018-08-14-how-to-use-comparators.md  2018-08-14-selector-best-practices.md  2018-08-14-what-happened-to-testfor.md  2018-08-15-functions-tags-as-event-hooks.md  2018-08-15-how-to-use-repeaters.md  2018-08-15-loot-table-randomization.md  2018-08-22-random-number-generation-with-uuids.md  2018-08-22-when-to-use-type-in-selectors.md  2018-09-07-selector-argument-order.md  2018-09-07-which-selector-arguments-should-i-include.md
docs/pages/: contributing.md
html/: index.html  lectern.html  print.html  searchindex.js  searchindex.json
markers/: area_effect_clouds.html  armor_stands.html  example_pack.html  index.html  markers.html
misc/: contributors.html
scripts/: scan_for_packs.py
src/: README.md  SUMMARY.md  lectern.md
src/markers/: README.md  (+4 more)
(+6 files in other folders)
